--- a/FUST.ECommerce/Components/Pages/Users.razor
+++ b/FUST.ECommerce/Components/Pages/Users.razor
@@ -5,6 +5,7 @@
 <a class="btn btn-primary" href="/admin/users/edit">Modifica un utente</a>
 <a class="btn btn-primary" href="/admin/users/list">Lista degli utenti</a>
 <a class="btn btn-primary" href="/admin/users/resetpassword">Reimposta la password</a>
+<a class="btn btn-primary" href="/admin/users/register">Nuovo account</a>
 @code {
 
 }
