--- a/FUST.ECommerce/Components/Pages/Register.razor
+++ b/FUST.ECommerce/Components/Pages/Register.razor
@@ -1,6 +1,6 @@
 ﻿@page "/admin/users/register"
 <h3>Register</h3>
-<form method="post" action="/login" id="frmReg">
+<form method="post" action="/account/login" id="frmReg">
     <label>Name: </label>
     <input type="text" @bind="name"/>
     <br />
